@@ -7,12 +7,9 @@ package io.airbyte.integrations.standardtest.destination;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
@@ -31,6 +28,8 @@ import io.airbyte.config.StandardCheckConnectionOutput;
 import io.airbyte.config.StandardCheckConnectionOutput.Status;
 import io.airbyte.config.WorkerDestinationConfig;
 import io.airbyte.integrations.destination.NamingConventionTransformer;
+import io.airbyte.integrations.standardtest.destination.comparator.BasicTestDataComparator;
+import io.airbyte.integrations.standardtest.destination.comparator.TestDataComparator;
 import io.airbyte.protocol.models.AirbyteCatalog;
 import io.airbyte.protocol.models.AirbyteMessage;
 import io.airbyte.protocol.models.AirbyteMessage.Type;
@@ -64,23 +63,15 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Random;
-import java.util.Spliterator;
-import java.util.Spliterators;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
-import org.apache.commons.lang3.StringUtils;
 import org.joda.time.DateTime;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -94,7 +85,7 @@ import org.junit.jupiter.params.provider.ArgumentsSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public abstract class DestinationAcceptanceTest implements DateTimeConverter {
+public abstract class DestinationAcceptanceTest {
 
   private static final Random RANDOM = new Random();
   private static final String NORMALIZATION_VERSION = "dev";
@@ -107,11 +98,11 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
   private TestDestinationEnv testEnv;
 
   private Path jobRoot;
-  protected Path localRoot;
   private ProcessFactory processFactory;
   private WorkerConfigs workerConfigs;
 
-  protected Map<String, String> dateTimeFieldNames = Collections.emptyMap();
+  protected Path localRoot;
+  protected TestDataComparator testDataComparator = getTestDataComparator();
 
   /**
    * Name of the docker image that the tests will run against.
@@ -310,10 +301,13 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
    */
   protected abstract void tearDown(TestDestinationEnv testEnv) throws Exception;
 
+  /**
+   * @deprecated This method is moved to the AdvancedTestDataComparator. Please move your destination
+   *             implementation of the method to your comparator implementation.
+   */
+  @Deprecated
   protected List<String> resolveIdentifier(final String identifier) {
-    final List<String> result = new ArrayList<>();
-    result.add(identifier);
-    return result;
+    return List.of(identifier);
   }
 
   @BeforeEach
@@ -379,11 +373,6 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
     final JsonNode config = getConfig();
     final String defaultSchema = getDefaultSchema(config);
     runSyncAndVerifyStateOutput(config, messages, configuredCatalog, false);
-    if (requiresDateTimeConversionForSync()) {
-      dateTimeFieldNames = getDateTimeFieldsFormat(catalog.getStreams());
-      convertDateTimeFields(messages, dateTimeFieldNames);
-      deserializeNestedObjects(messages, null);
-    }
     retrieveRawRecordsAndAssertSameMessages(catalog, messages, defaultSchema);
   }
 
@@ -583,11 +572,6 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
 
     final String defaultSchema = getDefaultSchema(config);
     final List<AirbyteRecordMessage> actualMessages = retrieveNormalizedRecords(catalog, defaultSchema);
-    if (requiresDateTimeConversionForNormalizedSync()) {
-      dateTimeFieldNames = getDateTimeFieldsFormat(catalog.getStreams());
-      convertDateTimeFields(messages, dateTimeFieldNames);
-      deserializeNestedObjects(messages, actualMessages);
-    }
     assertSameMessages(messages, actualMessages, true);
   }
 
@@ -1129,27 +1113,17 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
                                                          final List<AirbyteMessage> messages,
                                                          final String defaultSchema)
       throws Exception {
-    final List<AirbyteRecordMessage> actualMessages = retrieveRawRecords(catalog, defaultSchema);
-
-    assertSameMessages(messages, actualMessages, false);
-  }
-
-  protected List<AirbyteRecordMessage> retrieveRawRecords(final AirbyteCatalog catalog, final String defaultSchema)
-      throws Exception {
     final List<AirbyteRecordMessage> actualMessages = new ArrayList<>();
     for (final AirbyteStream stream : catalog.getStreams()) {
       final String streamName = stream.getName();
       final String schema = stream.getNamespace() != null ? stream.getNamespace() : defaultSchema;
-      final List<AirbyteRecordMessage> msgList = retrieveRecords(testEnv, streamName, schema,
-          stream.getJsonSchema())
-              .stream()
-              .map(data -> new AirbyteRecordMessage().withStream(streamName).withNamespace(schema)
-                  .withData(data))
-              .toList();
+      final List<AirbyteRecordMessage> msgList = retrieveRecords(testEnv, streamName, schema, stream.getJsonSchema())
+          .stream()
+          .map(data -> new AirbyteRecordMessage().withStream(streamName).withNamespace(schema).withData(data)).toList();
       actualMessages.addAll(msgList);
     }
 
-    return actualMessages;
+    assertSameMessages(messages, actualMessages, false);
   }
 
   // ignores emitted at.
@@ -1162,69 +1136,14 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
         .peek(recordMessage -> recordMessage.setEmittedAt(null))
         .map(recordMessage -> pruneAirbyteInternalFields ? safePrune(recordMessage) : recordMessage)
         .map(AirbyteRecordMessage::getData)
-        .peek(this::sortDataFields)
-        .sorted(Comparator.comparing(JsonNode::toString))
         .collect(Collectors.toList());
 
     final List<JsonNode> actualProcessed = actual.stream()
         .map(recordMessage -> pruneAirbyteInternalFields ? safePrune(recordMessage) : recordMessage)
         .map(AirbyteRecordMessage::getData)
-        .peek(this::sortDataFields)
-        .sorted(Comparator.comparing(JsonNode::toString))
         .collect(Collectors.toList());
 
-    assertSameData(expectedProcessed, actualProcessed);
-  }
-
-  private void assertSameData(final List<JsonNode> expected, final List<JsonNode> actual) {
-    LOGGER.info("Expected data {}", expected);
-    LOGGER.info("Actual data   {}", actual);
-    assertEquals(expected.size(), actual.size());
-    final Iterator<JsonNode> expectedIterator = expected.iterator();
-    final Iterator<JsonNode> actualIterator = actual.iterator();
-    while (expectedIterator.hasNext() && actualIterator.hasNext()) {
-      final JsonNode expectedData = expectedIterator.next();
-      final JsonNode actualData = actualIterator.next();
-      final Iterator<Entry<String, JsonNode>> expectedDataIterator = expectedData.fields();
-      LOGGER.info("Expected row {}", expectedData);
-      LOGGER.info("Actual row   {}", actualData);
-      assertEquals(expectedData.size(), actualData.size(), "Unequal row size");
-      while (expectedDataIterator.hasNext()) {
-        final Entry<String, JsonNode> expectedEntry = expectedDataIterator.next();
-        final JsonNode expectedValue = expectedEntry.getValue();
-        JsonNode actualValue = null;
-        String key = expectedEntry.getKey();
-        for (final String tmpKey : resolveIdentifier(expectedEntry.getKey())) {
-          actualValue = actualData.get(tmpKey);
-          if (actualValue != null) {
-            key = tmpKey;
-            break;
-          }
-        }
-        LOGGER.info("For {} Expected {} vs Actual {}", key, expectedValue, actualValue);
-        assertTrue(actualData.has(key));
-        assertSameValue(key, expectedValue, actualValue);
-      }
-    }
-  }
-
-  /**
-   * Method that will sort all fields by name and rewrite JsonNode in sorted order
-   *
-   * @param data - data node from AirbyteMessage
-   */
-  protected void sortDataFields(JsonNode data) {
-    var sortedFields = StreamSupport.stream(Spliterators.spliteratorUnknownSize(data.fields(),
-        Spliterator.ORDERED), false)
-        .sorted(Entry.comparingByKey(Comparator.comparing(String::toLowerCase))).toList();
-    ((ObjectNode) data).removeAll();
-    IntStream.range(0, sortedFields.size())
-        .forEach(i -> ((ObjectNode) data).set(sortedFields.get(i).getKey().toLowerCase(), sortedFields.get(i).getValue()));
-  }
-
-  // Allows subclasses to implement custom comparison asserts
-  protected void assertSameValue(final String key, final JsonNode expectedValue, final JsonNode actualValue) {
-    assertEquals(expectedValue, actualValue);
+    testDataComparator.assertSameData(expectedProcessed, actualProcessed);
   }
 
   protected List<AirbyteRecordMessage> retrieveNormalizedRecords(final AirbyteCatalog catalog, final String defaultSchema) throws Exception {
@@ -1235,8 +1154,7 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
 
       final List<AirbyteRecordMessage> msgList = retrieveNormalizedRecords(testEnv, streamName, defaultSchema)
           .stream()
-          .map(data -> new AirbyteRecordMessage().withStream(streamName).withData(data))
-          .collect(Collectors.toList());
+          .map(data -> new AirbyteRecordMessage().withStream(streamName).withData(data)).toList();
       actualMessages.addAll(msgList);
     }
     return actualMessages;
@@ -1425,40 +1343,6 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
     destination.notifyEndOfStream();
   }
 
-  /**
-   * This method goes through stream schemas and collect field names which format is "date" or
-   * "date-time"
-   *
-   * @return map where key is a field name and value is "date" or "date-time"
-   */
-  protected static Map<String, String> getDateTimeFieldsFormat(final List<AirbyteStream> streams) {
-    final Map<String, String> fieldFormats = new HashMap<>();
-
-    streams.stream().map(AirbyteStream::getJsonSchema).forEach(streamSchema -> {
-      findDateTimeFields(streamSchema, fieldFormats, StringUtils.EMPTY);
-    });
-
-    return fieldFormats;
-  }
-
-  private static void findDateTimeFields(JsonNode streamSchema, Map<String, String> fieldFormats, String parent) {
-    final JsonNode fieldDefinitions = streamSchema.get("properties");
-    final Iterator<Entry<String, JsonNode>> iterator = fieldDefinitions.fields();
-    while (iterator.hasNext()) {
-      Map.Entry<String, JsonNode> entry = iterator.next();
-      if (entry.getValue().has("type") && entry.getValue().get("type").asText().equals("object")
-          && entry.getValue().has("properties")) {
-        findDateTimeFields(entry.getValue(), fieldFormats, parent + "/" + entry.getKey());
-      }
-      if (entry.getValue().has("format")) {
-        String format = entry.getValue().get("format").asText();
-        if (format.equalsIgnoreCase("date") || format.equalsIgnoreCase("date-time")) {
-          fieldFormats.put(parent + "/" + entry.getKey(), format);
-        }
-      }
-    }
-  }
-
   private final static String LOREM_IPSUM =
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque malesuada lacinia aliquet. Nam feugiat mauris vel magna dignissim feugiat. Nam non dapibus sapien, ac mattis purus. Donec mollis libero erat, a rutrum ipsum pretium id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec aliquam leo. Aliquam eu dictum augue, a ornare elit.\n"
           + "\n"
@@ -1469,6 +1353,10 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
           + "Pellentesque elementum vehicula egestas. Sed volutpat velit arcu, at imperdiet sapien consectetur facilisis. Suspendisse porttitor tincidunt interdum. Morbi gravida faucibus tortor, ut rutrum magna tincidunt a. Morbi eu nisi eget dui finibus hendrerit sit amet in augue. Aenean imperdiet lacus enim, a volutpat nulla placerat at. Suspendisse nibh ipsum, venenatis vel maximus ut, fringilla nec felis. Sed risus mi, egestas quis quam ullamcorper, pharetra vestibulum diam.\n"
           + "\n"
           + "Praesent finibus scelerisque elit, accumsan condimentum risus mattis vitae. Donec tristique hendrerit facilisis. Curabitur metus purus, venenatis non elementum id, finibus eu augue. Quisque posuere rhoncus ligula, et vehicula erat pulvinar at. Pellentesque vel quam vel lectus tincidunt congue quis id sapien. Ut efficitur mauris vitae pretium iaculis. Aliquam consectetur iaculis nisi vitae laoreet. Integer vel odio quis diam mattis tempor eget nec est. Donec iaculis facilisis neque, at dictum magna vestibulum ut. Sed malesuada non nunc ac consequat. Maecenas tempus lectus a nisl congue, ac venenatis diam viverra. Nam ac justo id nulla iaculis lobortis in eu ligula. Vivamus et ligula id sapien efficitur aliquet. Curabitur est justo, tempus vitae mollis quis, tincidunt vitae felis. Vestibulum molestie laoreet justo, nec mollis purus vulputate at.";
+
+  protected TestDataComparator getTestDataComparator() {
+    return new BasicTestDataComparator(this::resolveIdentifier);
+  }
 
   protected boolean supportBasicDataTypeTest() {
     return false;
@@ -1547,46 +1435,6 @@ public abstract class DestinationAcceptanceTest implements DateTimeConverter {
       }
     });
     return airbyteMessages;
-  }
-
-  /**
-   * Converts serialized json blob for nested object to real json object. E.g. {"key":
-   * "{\"nestedObject\" : \"one\"}"} will be converted to {"key": {"nestedObject" : "one"}} This
-   * method goes through @messages and store names of nested object fields to the set. After that it
-   * goes through
-   *
-   * @actualMessages and deserialize jsonb string fields from set, to JsonNode
-   *
-   * @param messages from edge_case_messages.txt
-   * @param actualMessages fetched messages from destination which could contain serialized json
-   *        objects
-   */
-  protected void deserializeNestedObjects(List<AirbyteMessage> messages, List<AirbyteRecordMessage> actualMessages) {
-    HashSet<String> nestedFieldNames = new HashSet<>();
-    for (AirbyteMessage message : messages) {
-      if (message.getType() == Type.RECORD) {
-        var iterator = message.getRecord().getData().fieldNames();
-        while (iterator.hasNext()) {
-          var fieldName = iterator.next();
-          if (message.getRecord().getData().get(fieldName).isContainerNode()) {
-            nestedFieldNames.add(fieldName);
-          }
-        }
-      }
-    }
-    if (actualMessages != null) {
-      for (AirbyteRecordMessage message : actualMessages) {
-        nestedFieldNames.stream().filter(name -> message.getData().has(name)).forEach(name -> {
-          String data = message.getData().get(name).asText();
-          try {
-            ((ObjectNode) message.getData()).set(name,
-                new ObjectMapper().readTree(data));
-          } catch (JsonProcessingException e) {
-            e.printStackTrace();
-          }
-        });
-      }
-    }
   }
 
 }
